<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myApp.michal.crossNote.Activites.Calculator.CalculatorActivity"
    tools:showIn="@layout/app_bar_calculator">

    <Spinner
        android:id="@+id/spinnerCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:alpha="0.6"
        android:background="@android:color/black"
        android:backgroundTint="@color/darkGray"
        android:popupBackground="@android:color/transparent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/spinnerCalculator"
        android:text="@string/Empty"
        android:textColor="@color/colorAccent"
        android:background="@android:color/black"
        android:alpha="0.51"
        android:gravity="center"
        android:textSize="@dimen/text_size_12"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPercentCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/spinnerCalculator"
        android:layout_marginTop="100dp"
        android:textColor="@color/darkGray">

        <EditText
            android:id="@+id/editPercentCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_12"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/viewWeightCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textSize="@dimen/text_size_12"
        android:textAlignment="center" />
</RelativeLayout>