<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myApp.michal.crossNote.Activites.Main.ViewTrainingActivity"
    tools:showIn="@layout/activity_view_training">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="changeCategory"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="changeTime"
            android:textColor="@color/colorPrimary"
            android:textSize="8pt" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RCView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:onClick="changeResult"
        android:textSize="8pt"
        android:text="@string/Result"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMotionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="add new motion button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="addMotion"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/genBitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="share workout button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="shareTraining"
        app:srcCompat="@drawable/ic_share_black_24dp" />

</RelativeLayout>
