<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/repEdit"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/darkGray"
        android:textColorHint="@color/black"
        android:theme="@style/MyDialogTheme"
        android:hint="Repetition" />

    <Spinner
        android:id="@+id/categoryMotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:popupBackground="@color/darkGray"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/weightEdit"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/categoryMotion"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:theme="@style/MyDialogTheme"
        android:hint="Load"/>

    <ToggleButton
        android:id="@+id/toggleButtonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/categoryMotion"
        android:theme="@style/MyDialogTheme"
        android:textOff="Meters"
        android:textOn="Cals"
        android:text="ToggleButton" />

</RelativeLayout>


